上传2.0.7版本 分享图片功能

--- a/pages/detail/dzdetail.wxml
+++ b/pages/detail/dzdetail.wxml
@@ -26,4 +26,7 @@
   <!-- 分享图片 -->
   <import src="../../template/shareimg.wxml" />
   <template is="shareImg" data="{{...shareImg}}" />
+  <!-- 相册授权提示 -->
+  <import src="../../template/setting.wxml" />
+  <template is="setting" data="{{...setting}}" />
 </view>
