--- a/template/bottombar.wxml
+++ b/template/bottombar.wxml
@@ -16,7 +16,7 @@
     <view class='icon-vertical'>
       <button class='iconfont icon-share_fill myicon' bindtap="tap_share"></button>
       <view class='icon-text-box'>
-        <view class='icon-text'>0</view>
+        <view class='icon-text'>{{article.articleShare}}</view>
       </view>
     </view>
     <view class="commodity_screen" bindtap="hideModal" wx:if="{{showModalStatus}}"></view>
